Add page formatting, site intro text, closing footer tag, additional styling

--- a/index.html
+++ b/index.html
@@ -15,37 +15,46 @@
                 <h1 id="logo">Super Mario Bros.<br> 8-bit Games</h1>
             </a>
             <nav>
-            <ul id="menu">
-                <li>
-                    <a href="#">External Sites</a>
-                </li>
-                <li>
-                    <a href="#">Contact Us</a>
-                </li>
-                <li>
-                    <a href="index.html" class="active">Home</a>
-                </li>
-            </ul>
-        </nav>
+                <ul id="menu">
+                    <li>
+                        <a href="#">External Sites</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="index.html" class="active">Home</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
+        <section>
+            <div id="site-intro">
+                <h3>1985 - 1991</h3>
+                <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
+                    known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
+                </p>
+            </div>
+        </section>
+        <hr>
         <section id="box-art">
             <a href="#"><img src="assets/images/super-mario-bros.jpg"></a>
             <a href="#"><img src="assets/images/super-mario-bros-2-jp.jpg"></a>
             <a href="#"><img src="assets/images/super-mario-bros-2.jpg"></a>
             <a href="#"><img src="assets/images/super-mario-bros-3.jpg"></a>
         </section>
-            <footer>
-        <ul class="external-links">
-            <li>
-                <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
-            </li>
-            <li>
-                <a href="https://www.nintendo.co.uk/Games/Nintendo-Characters-Hub/Super-Mario-Hub/Super-Mario-Bros-Hub-Mario-Games-627604.html" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">Super Mario Bros. Hub</a>
-            </li>
-            <li>
-                <a href="https://www.mariowiki.com/" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)">Super Mario Wiki!</a>
-            </li>
-        </ul>
-
+        <footer>
+            <ul class="external-links">
+                <li>
+                    <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
+                </li>
+                <li>
+                    <a href="https://www.nintendo.co.uk/Games/Nintendo-Characters-Hub/Super-Mario-Hub/Super-Mario-Bros-Hub-Mario-Games-627604.html" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">Super Mario Bros. Hub</a>
+                </li>
+                <li>
+                    <a href="https://www.mariowiki.com/" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)">Super Mario Wiki!</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
