Added styling to external sites, changed links to sites for consistency

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
             <a href="#"><img src="assets/images/super-mario-bros-2.jpg"></a>
             <a href="#"><img src="assets/images/super-mario-bros-3.jpg"></a>
         </section>
+        <hr>
+        <div>
+            <h4 align="center"><u>External Sites</u></h4>
+        </div>
         <footer>
-            <ul class="external-links">
+            <ul class="external-sites">
                 <li>
                     <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
                 </li>
