--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee">
-        <title>Document</title>
+        <title>Super Mario Bros. 8-bit Games</title>
     </head>
     <body>
         <header>
