initial commit for smb game page

--- a/super-mario-bros.html
+++ b/super-mario-bros.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee">
-        <title>Super Mario Bros. 8-bit Games</title>
+        <title>Super Mario Bros.</title>
     </head>
     <body>
         <header>
@@ -28,25 +28,17 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <div id="site-intro">
-                <h3>1985 - 1991</h3>
-                <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
-                    known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
-                </p>
+        <span>
+            <div class="game-page">
+                <img src="assets/images/super-mario-bros.jpg">
+                <h4>Release Date:</h4>
+                <p>JP: 13th Sep 1985</p>
+                <br><p>NA: 18th Oct 1985</p>
+                <br><p>EUR: 15th May 1987</p>
+                <br><p>AUS: 1st Jul 1987</p>
             </div>
-        </section>
-        <hr>
-        <section id="box-art">
-            <a href="super-mario-bros.html"><img src="assets/images/super-mario-bros.jpg"></a>
-            <a href="#"><img src="assets/images/super-mario-bros-2-jp.jpg"></a>
-            <a href="#"><img src="assets/images/super-mario-bros-2.jpg"></a>
-            <a href="#"><img src="assets/images/super-mario-bros-3.jpg"></a>
-        </section>
-        <hr>
-        <div>
-            <h4 align="center"><u>External Sites</u></h4>
-        </div>
+        </span>
+    
         <footer>
             <ul class="external-sites">
                 <li>
