Added styling code to smb game page

--- a/super-mario-bros.html
+++ b/super-mario-bros.html
@@ -28,8 +28,8 @@
                 </ul>
             </nav>
         </header>
-        <span>
-            <div class="game-page">
+        <section id="game-page">
+            <div class="game-page-left">
                 <img src="assets/images/super-mario-bros.jpg">
                 <h4>Release Date:</h4>
                 <p>JP: 13th Sep 1985</p>
@@ -37,7 +37,11 @@
                 <br><p>EUR: 15th May 1987</p>
                 <br><p>AUS: 1st Jul 1987</p>
             </div>
-        </span>
+            <div class="game-page-center">
+                <p>Some text</p>
+                
+            </div>
+        </section>
     
         <footer>
             <ul class="external-sites">
