Have set cottect structure for the game pages

--- a/super-mario-bros.html
+++ b/super-mario-bros.html
@@ -28,8 +28,9 @@
                 </ul>
             </nav>
         </header>
-        <section id="game-page">
-            <div class="game-page-left">
+        <hr>
+        <section>
+            <div>
                 <img src="assets/images/super-mario-bros.jpg">
                 <h4>Release Date:</h4>
                 <p>JP: 13th Sep 1985</p>
@@ -37,12 +38,19 @@
                 <br><p>EUR: 15th May 1987</p>
                 <br><p>AUS: 1st Jul 1987</p>
             </div>
-            <div class="game-page-center">
+            <div>
                 <p>Some text</p>
-                
+            </div>
+            <div>
+                <video width="320" height="240" controls>
+                    <source src="https://www.youtube.com/watch?v=ia8bhFoqkVE">
+                </video>
             </div>
         </section>
-    
+        <hr>
+        <div>
+            <h4 align="center"><u>External Sites</u></h4>
+        </div>
         <footer>
             <ul class="external-sites">
                 <li>
