completed first game page for super mario bros

--- a/super-mario-bros.html
+++ b/super-mario-bros.html
@@ -34,23 +34,25 @@
                 <img src="assets/images/super-mario-bros.jpg">
                 <h4>Release Date:</h4>
                 <p>JP: 13th Sep 1985</p>
-                <br><p>NA: 18th Oct 1985</p>
-                <br><p>EUR: 15th May 1987</p>
+                <br><p>USA: 17th Nov 1985</p>
+                <br><p>EU/UK: 15th May 1987</p>
                 <br><p>AUS: 1st Jul 1987</p>
             </div>
             <div>
-                <p>Some text</p>
+                <p>The character Mario first appeared in single screen arcade games. The first being Donkey Kong (known then as Jump Man) and Mario Bros.
+                    Super Mario Bros. had side-scrolling levels which were platforming obstacle courses that the player had to progress through to reach the flag pole at the end.
+                    The game introduced series staples, inluding common enemies like the Goombas and power-ups like the fire flower. 
+                </p>
+                <p>The game was bundled with the Nintendo Entertainment System at launch in the USA and EU/UK regions. The game and console were highly successful. Super Mario Bros.
+                    went on to sell over 40 million copies worldwide.
+                </p>
             </div>
             <div>
-                <video width="320" height="240" controls>
-                    <source src="https://www.youtube.com/watch?v=ia8bhFoqkVE">
-                </video>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/ia8bhFoqkVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <hr>
-        <div>
-            <h4 align="center"><u>External Sites</u></h4>
-        </div>
+        <h4 align="center"><u>External Sites</u></h4>
         <footer>
             <ul class="external-sites">
                 <li>
