fixed / changed  positioning of elements on the game page

--- a/super-mario-bros.html
+++ b/super-mario-bros.html
@@ -30,13 +30,31 @@
         </header>
         <hr>
         <section>
-            <div>
+            <div class="release-info">
                 <img src="assets/images/super-mario-bros.jpg">
-                <h4>Release Date:</h4>
-                <p>JP: 13th Sep 1985</p>
-                <br><p>USA: 17th Nov 1985</p>
-                <br><p>EU/UK: 15th May 1987</p>
-                <br><p>AUS: 1st Jul 1987</p>
+                <table>
+                    <tr>
+                        <th>
+                            <h4>Release Date:</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>JP:</td>
+                        <td>13th Sep 1985</td>
+                    </tr>
+                    <tr>
+                        <td>USA:</td>
+                        <td>17th Nov 1985</td>
+                    </tr>
+                    <tr>
+                        <td>EU/UK:</td>
+                        <td>15th May 1987</td>
+                    </tr>
+                    <tr>
+                        <td>AUS:</td>
+                        <td>1st Jul 1987</td>
+                    </tr>
+                </table>
             </div>
             <div>
                 <p>The character Mario first appeared in single screen arcade games. The first being Donkey Kong (known then as Jump Man) and Mario Bros.
