renamed smb game page html file, created page for smb-2-jp

--- a/smb.html
+++ b/smb.html
@@ -57,11 +57,13 @@
                 </table>
             </div>
             <div>
-                <p>The character Mario first appeared in single screen arcade games. The first being Donkey Kong (known then as Jump Man) and Mario Bros.
+                <p>
+                    The character Mario first appeared in single screen arcade games. The first being Donkey Kong (known then as Jump Man) and Mario Bros.
                     Super Mario Bros. had side-scrolling levels which were platforming obstacle courses that the player had to progress through to reach the flag pole at the end.
                     The game introduced series staples, inluding common enemies like the Goombas and power-ups like the fire flower. 
                 </p>
-                <p>The game was bundled with the Nintendo Entertainment System at launch in the USA and EU/UK regions. The game and console were highly successful. Super Mario Bros.
+                <p>
+                    The game was bundled with the Nintendo Entertainment System at launch in the USA and EU/UK regions. The game and console were highly successful. Super Mario Bros.
                     went on to sell over 40 million copies worldwide.
                 </p>
             </div>
