Created game page for SMB 2

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section id="box-art">
             <a href="smb.html"><img src="assets/images/super-mario-bros.jpg"></a>
             <a href="smb-2-jp.html"><img src="assets/images/super-mario-bros-2-jp.jpg"></a>
-            <a href="#"><img src="assets/images/super-mario-bros-2.jpg"></a>
+            <a href="smb-2.html"><img src="assets/images/super-mario-bros-2.jpg"></a>
             <a href="#"><img src="assets/images/super-mario-bros-3.jpg"></a>
         </section>
         <hr>
