--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="smb.html"><img src="assets/images/super-mario-bros.jpg"></a>
             <a href="smb-2-jp.html"><img src="assets/images/super-mario-bros-2-jp.jpg"></a>
             <a href="smb-2.html"><img src="assets/images/super-mario-bros-2.jpg"></a>
-            <a href="#"><img src="assets/images/super-mario-bros-3.jpg"></a>
+            <a href="smb-3.html"><img src="assets/images/super-mario-bros-3.jpg"></a>
         </section>
         <hr>
         <h4 align="center"><u>External Sites</u></h4>
