Corrected spelling mistakes

--- a/smb-2.html
+++ b/smb-2.html
@@ -65,7 +65,7 @@
                 </p>
                 <p>
                     A game was released for the Famicom in Japan called Doki Doki Panic. This was a platforming game about a family that was trapped in a dream world.
-                    The playable characters were the members of the family, mother, father, son and daughter. It's not know how the following decision was reached, but an SMB
+                    The playable characters were the members of the family, mother, father, son and daughter. It's not known how the following decision was reached, but an SMB
                     sequel was needed for the North American region. The playable characters in Doki Doki Panic were replaced with Mario, Luigi, Princess Toadstool and Toad.
                     With this minor re-skin, the game was released as Super Mario Bros. 2 in USA and EU/UK regions. This is why the gameplay is so unique compared with other 2D games in the series.
                     
