--- a/smb-3.html
+++ b/smb-3.html
@@ -59,10 +59,10 @@
             <div>
                 <p>
                     Super Mario Bros. 3 greatly expanded on the gameplay of the first game. The graphics and sounds were a huge leap forward. There were new power-ups and enemy types. There were vertical levels to climb as well 
-                    as the standard with horizontal progression from left to right. Each world was visualised as a map where the player would move Mario along a path to each level. Each world
-                    had a distinct style such as desert setting, while another was covered in snow. There were bonus levels where players could gain extra power-ups to store in an inventory
+                    as the standard with horizontal progression from left to right. Each world was visualized as a map where the player would move Mario along a path to each level. Each world
+                    had a distinct style such as a desert setting, while another was covered in snow. There were bonus levels where players could gain extra power-ups to store in an inventory
                     which could be used prior to starting a level. This inventory, the world maps and secrets to discover, made SMB 3 feel more like an adventure game. 
-                    A memory chip known as MMC3 (Memory Management Controller) was placed on the game cartridge which made the above enchancements possible. 
+                    A memory chip known as MMC3 (Memory Management Controller) was placed in the game cartridge which made the above enchancements possible. 
                 <p>
                     Super Mario Bros. 3 was a commercial success. Many fans consider this the best of the 2D games, such was the design and creativity. The success of SMB 3 helped Nintendo's aging 8-bit console compete with Sega's
                     more powerful 16-bit Mega Drive which was released in close proximity.
