--- a/index.html
+++ b/index.html
@@ -29,14 +29,33 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <div id="site-intro">
-                <h3>1985 - 1991</h3>
-                <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
+        <hr>
+        <div id="site-intro">
+            <h3>1985 - 1991</h3>
+            <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
                     known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
-                </p>
-            </div>
-        </section>
+            </p>
+        </div>
+        <div>
+            <table id="consoles">
+                <tr>
+                    <th>
+                        <h6>NES</h6>
+                    </th>
+                    <th>
+                        <h6>Famicom</h6>
+                    </th>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/NES-Console-Set.jpg/440px-NES-Console-Set.jpg">
+                    </td>
+                    <td>  
+                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Nintendo-Famicom-Console-Set-FL.jpg/440px-Nintendo-Famicom-Console-Set-FL.jpg">
+                    </td>
+                </tr>
+            </table>
+        </div>
         <hr>
         <section id="box-art">
             <a href="smb.html"><img src="assets/images/super-mario-bros.jpg"></a>
