--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="#">External Sites</a>
+                        <a href="#ext-sites">External Sites</a>
                     </li>
                     <li>
                         <a href="contact-us.html">Contact Us</a>
@@ -64,7 +64,7 @@
         </section>
         <h4 align="center"><u>External Sites</u></h4>
         <footer>
-            <ul class="external-sites">
+            <ul class="external-sites" id="ext-sites">
                 <li>
                     <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
                 </li>
