Added ext sites link function to other pages, added active link code to css file and contact page

--- a/smb-2.html
+++ b/smb-2.html
@@ -17,10 +17,10 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="#">External Sites</a>
+                        <a href="#ext-sites">External Sites</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact-us.html">Contact Us</a>
                     </li>
                     <li>
                         <a href="index.html" class="active">Home</a>
@@ -79,7 +79,7 @@
         <hr>
         <h4 align="center"><u>External Sites</u></h4>
         <footer>
-            <ul class="external-sites">
+            <ul class="external-sites" id="ext-sites">
                 <li>
                     <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
                 </li>
