--- a/contact-us.html
+++ b/contact-us.html
@@ -18,13 +18,13 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="#">External Sites</a>
+                        <a href="#ext-sites">External Sites</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact-us.html" class="active">Contact Us</a>
                     </li>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                 </ul>
             </nav>
@@ -46,7 +46,7 @@
         </section>
         <h4 align="center"><u>External Sites</u></h4>
         <footer>
-            <ul class="external-sites">
+            <ul class="external-sites" id="ext-sites">
                 <li>
                     <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
                 </li>
