--- a/smb-2-jp.html
+++ b/smb-2-jp.html
@@ -23,7 +23,7 @@
                         <a href="contact-us.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                 </ul>
             </nav>
