--- a/contact-us.html
+++ b/contact-us.html
@@ -31,7 +31,7 @@
         </header>
         <hr>
         <section class="form-section">
-            <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
+            <form method="POST" action="index.html" class="contact-form">
                 <h2>Contact Us</h2>
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="first_name" required class="text-input">
