--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="#ext-sites">External Sites</a>
                     </li>
                     <li>
-                        <a href="contact-us.html">Contact Us</a>
+                        <a href="#contact">Contact Us</a>
                     </li>
                     <li>
                         <a href="index.html" class="active">Home</a>
@@ -33,7 +33,7 @@
         <div id="site-intro">
             <h3>1985 - 1991</h3>
             <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
-                    known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
+                known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
             </p>
         </div>
         <div>
@@ -56,12 +56,192 @@
                 </tr>
             </table>
         </div>
-        <section id="box-art">
-            <a href="smb.html"><img src="assets/images/super-mario-bros.jpg"></a>
-            <a href="smb-2-jp.html"><img src="assets/images/super-mario-bros-2-jp.jpg"></a>
-            <a href="smb-2.html"><img src="assets/images/super-mario-bros-2.jpg"></a>
-            <a href="smb-3.html"><img src="assets/images/super-mario-bros-3.jpg"></a>
+        <hr>
+        <section>
+            <div class="release-info">
+                <img src="assets/images/super-mario-bros.jpg">
+                <table>
+                    <tr>
+                        <th>
+                            <h4>Release Date:</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>JP:</td>
+                        <td>13th Sep 1985</td>
+                    </tr>
+                    <tr>
+                        <td>USA:</td>
+                        <td>17th Nov 1985</td>
+                    </tr>
+                    <tr>
+                        <td>EU/UK:</td>
+                        <td>15th May 1987</td>
+                    </tr>
+                    <tr>
+                        <td>AUS:</td>
+                        <td>1st Jul 1987</td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <p>
+                    The character Mario first appeared in single screen arcade games. The first being Donkey Kong (known then as Jump Man) and Mario Bros.
+                    Super Mario Bros. had side-scrolling levels which were platforming obstacle courses that the player had to progress through to reach the flag pole at the end.
+                    The game introduced series staples, inluding common enemies like the Goombas and power-ups like the fire flower. 
+                </p>
+                <p>
+                    The game was bundled with the Nintendo Entertainment System at launch in the USA and EU/UK regions. The game and console were highly successful. Super Mario Bros.
+                    went on to sell over 40 million copies worldwide.
+                </p>
+            </div>
+            <div>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/ia8bhFoqkVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <hr>
+            <div class="release-info">
+                <img src="assets/images/super-mario-bros-2-jp.jpg">
+                <table>
+                    <tr>
+                        <th>
+                            <h4>Release Date:</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>JP:</td>
+                        <td>3rd Jun 1986</td>
+                    </tr>
+                    <tr>
+                        <td>USA:</td>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <td>EU/UK:</td>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <td>AUS:</td>
+                        <td>N/A</td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <p>
+                    The first sequel to Super Mario Bros. was released in Japan in 1986. The graphics and gameplay were mostly the same as the previous game. 
+                    New levels were included and levels from the previous game were extended and more difficult. The game also featured altered enemy behaviour and the poison
+                    mushroom which would harm Mario if touched.
+                </p>
+                <p>
+                    The game would be released in the west under the name Super Mario Bros.: The Lost Levels. This was included on the compilation release Super Mario All Stars
+                    for the 16-bit Super Nintendo Entertainment System. This compilation included the other three NES games with updated graphics and sound.
+                </p>
+            </div>
+            <div>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/GrXc91n2kPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <hr>
+            <div class="release-info">
+                <img src="assets/images/super-mario-bros-2.jpg">
+                <table>
+                    <tr>
+                        <th>
+                            <h4>Release Date:</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>JP:</td>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <td>USA:</td>
+                        <td>9th Oct 1988</td>
+                    </tr>
+                    <tr>
+                        <td>EU/UK:</td>
+                        <td>28th Apr 1989</td>
+                    </tr>
+                    <tr>
+                        <td>AUS:</td>
+                        <td>4th May 1989</td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <p>
+                    The NES was so successful in the USA that the games console market in this region was revived, after the crash in 1983.
+                    Nintendo of America (NOA) was building the NES brand with a sales message focused on family fun.
+                    NOA rejected the original Japanese release of SMB 2 because it was thought that the difficulty was too severe.
+                    Therefore, it wasn't seen as a good fit for the North American and Western market as a whole. It's worth noting the game had acheived critical success in Japan.
+                </p>
+                <p>
+                    A game was released for the Famicom in Japan called Doki Doki Panic. This was a platforming game about a family that was trapped in a dream world.
+                    The playable characters were the members of the family, mother, father, son and daughter. It's not known how the following decision was reached, but an SMB
+                    sequel was needed for the North American region. The playable characters in Doki Doki Panic were replaced with Mario, Luigi, Princess Toadstool and Toad.
+                    With this minor re-skin, the game was released as Super Mario Bros. 2 in USA and EU/UK regions. This is why the gameplay is so unique compared with other 2D games in the series.
+                </p>
+            </div>
+            <div>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/sssqnrc9ZAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <hr>
+            <div class="release-info">
+                <img src="assets/images/super-mario-bros-3.jpg">
+                <table>
+                    <tr>
+                        <th>
+                            <h4>Release Date:</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>JP:</td>
+                        <td>23rd Oct 1988</td>
+                    </tr>
+                    <tr>
+                        <td>USA:</td>
+                        <td>12th Feb 1990</td>
+                    </tr>
+                    <tr>
+                        <td>EU/UK:</td>
+                        <td>29th Aug 1991</td>
+                    </tr>
+                    <tr>
+                        <td>AUS:</td>
+                        <td>29th Aug 1991</td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <p>
+                    Super Mario Bros. 3 greatly expanded on the gameplay of the first game. The graphics and sounds were a huge leap forward. There were new power-ups and enemy types. There were vertical levels to climb as well 
+                    as the standard with horizontal progression from left to right. Each world was visualized as a map where the player would move Mario along a path to each level. Each world
+                    had a distinct style such as a desert setting, while another was covered in snow. There were bonus levels where players could gain extra power-ups to store in an inventory
+                    which could be used prior to starting a level. This inventory, the world maps and secrets to discover, made SMB 3 feel more like an adventure game. 
+                    A memory chip known as MMC3 (Memory Management Controller) was placed in the game cartridge which made the above enchancements possible. 
+                <p>
+                    Super Mario Bros. 3 was a commercial success. Many fans consider this the best of the 2D games, such was the design and creativity. The success of SMB 3 helped Nintendo's aging 8-bit console compete with Sega's
+                    more powerful 16-bit Mega Drive which was released in close proximity.
+                </p>
+            </div>
+            <div>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/82TL-Acm4ts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </section>
+        <hr>
+        <section class="form-section" id="contact">
+            <form method="POST" action="index.html" class="contact-form">
+                <h2>Contact Us</h2>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="first_name" required class="text-input">
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="last_name" required class="text-input">
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email_address" required class="text-input">
+                <label for="message">Message</label>
+                <input type="textarea" id="message" name="message_to_send" required class="text-input">
+                <input type="submit" value="Send" class="send-button">
+            </form>
+        </section>
+        <hr>
         <h4 align="center"><u>External Sites</u></h4>
         <footer>
             <ul class="external-sites" id="ext-sites">
