--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <a href="index.html">
-                <h1 id="logo">Super Mario Bros.<br> 8-bit Games</h1>
+                <h1 id="logo">Super Mario Bros. 8-bit Games</h1>
             </a>
             <nav>
                 <ul id="menu">
