--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </section>
         <hr>
         <section class="form-section" id="contact">
-            <form method="POST" action="index.html" class="contact-form">
+            <form action="#" class="contact-form" onsubmit="alert('Thank you for your message');">
                 <h2>Contact Us</h2>
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="first_name" required class="text-input">
