Moved footer heading within the footer tags and centered in rhe css file, added comments to html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Information on Super Mario Bros. 8-bit games">
+        <meta name="keywords" content="super mario bros, 8-bit games, super mario nes">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee">
 
         <title>Super Mario Bros. 8-bit Games</title>
     </head>
     <body>
+        <!--Logo and navigation menu-->
         <header>
             <a href="index.html">
                 <h1 id="logo">Super Mario Bros. 8-bit Games</h1>
@@ -30,12 +33,14 @@
             </nav>
         </header>
         <hr>
+        <!--Explanation of the purpoes of the site-->
         <div id="site-intro">
             <h3>1985 - 1991</h3>
             <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
                 known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
             </p>
         </div>
+        <!--Pictures of the console on which the games appeared. Useful information as it's a part of the ganes history. This was also added as decoration to prevent the home page appearing too plain.-->
         <div>
             <table id="consoles">
                 <tr>
@@ -57,7 +62,9 @@
             </table>
         </div>
         <hr>
+        <!--The section below contains the information for each game-->
         <section>
+            <!--The release-info divs contain the box art and release dates for each region-->
             <div class="release-info">
                 <img src="assets/images/super-mario-bros.jpg">
                 <table>
@@ -227,6 +234,7 @@
             </div>
         </section>
         <hr>
+        <!--Contact form-->
         <section class="form-section" id="contact">
             <form action="#" class="contact-form" onsubmit="alert('Thank you for your message');">
                 <h2>Contact Us</h2>
@@ -242,8 +250,9 @@
             </form>
         </section>
         <hr>
-        <h4 align="center"><u>External Sites</u></h4>
+        <!--Footer heading and content-->
         <footer>
+            <h4><u>External Sites</u></h4>
             <ul class="external-sites" id="ext-sites">
                 <li>
                     <a href="https://mario.nintendo.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">The official home of Super Mario</a>
