--- a/404.html
+++ b/404.html
@@ -13,5 +13,7 @@
         <title>Super Mario Bros. 8-bit Games</title>
     </head>
     <body>
+        <h3>404</h3>
         <h3>Page not found.</h3>
     </body>
+</html>
