added content to custom 404 page

--- a/404.html
+++ b/404.html
@@ -13,6 +13,25 @@
         <title>Super Mario Bros. 8-bit Games</title>
     </head>
     <body>
+        <header>
+            <a href="index.html">
+                <h1 id="logo">Super Mario Bros. 8-bit Games</h1>
+            </a>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="#ext-sites">External Sites</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="index.html" class="active">Home</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <hr>
         <h3>404</h3>
         <h3>Page not found.</h3>
     </body>
