Centralized page content, wrapped each game in section tag

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <hr>
         <!--The section below contains the information for each game-->
-        <section>
+        <section class="games-list">
             <!--The release-info divs contain the box art and release dates for each region-->
             <div class="release-info">
                 <img src="assets/images/super-mario-bros.jpg">
@@ -105,7 +105,9 @@
             <div>
                 <iframe width="500" height="315" src="https://www.youtube.com/embed/ia8bhFoqkVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <hr>
+        </section>
+        <hr>
+        <section class="games-list">
             <div class="release-info">
                 <img src="assets/images/super-mario-bros-2-jp.jpg">
                 <table>
@@ -146,7 +148,9 @@
             <div>
                 <iframe width="500" height="315" src="https://www.youtube.com/embed/GrXc91n2kPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <hr>
+        </section>
+        <hr>
+        <section class="games-list">
             <div class="release-info">
                 <img src="assets/images/super-mario-bros-2.jpg">
                 <table>
@@ -190,7 +194,9 @@
             <div>
                 <iframe width="500" height="315" src="https://www.youtube.com/embed/sssqnrc9ZAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <hr>
+        </section>
+        <hr>
+        <section class="games-list">
             <div class="release-info">
                 <img src="assets/images/super-mario-bros-3.jpg">
                 <table>
