--- a/404.html
+++ b/404.html
@@ -32,7 +32,9 @@
             </nav>
         </header>
         <hr>
-        <h3>404</h3>
-        <h3>Page not found.</h3>
+        <div id="custom-error">
+            <h3>404</h3>
+            <h3>Page not found.</h3>
+        </div>
     </body>
 </html>
