Amended comment for code change, added alt text to images

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/NES-Console-Set.jpg/440px-NES-Console-Set.jpg">
+                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/NES-Console-Set.jpg/440px-NES-Console-Set.jpg" alt="picture of nintendo entertainment system">
                     </td>
                     <td>  
-                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Nintendo-Famicom-Console-Set-FL.jpg/440px-Nintendo-Famicom-Console-Set-FL.jpg">
+                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Nintendo-Famicom-Console-Set-FL.jpg/440px-Nintendo-Famicom-Console-Set-FL.jpg" alt="picture of nintendo famicom">
                     </td>
                 </tr>
             </table>
         </div>
         <hr>
-        <!--The section below contains the information for each game-->
+        <!--The sections below contains the information for each game-->
         <section class="games-list">
             <!--The release-info divs contain the box art and release dates for each region-->
             <div class="release-info">
-                <img src="assets/images/super-mario-bros.jpg">
+                <img src="assets/images/super-mario-bros.jpg" alt="box art for super mario bros">
                 <table>
                     <tr>
                         <th>
@@ -109,7 +109,7 @@
         <hr>
         <section class="games-list">
             <div class="release-info">
-                <img src="assets/images/super-mario-bros-2-jp.jpg">
+                <img src="assets/images/super-mario-bros-2-jp.jpg" alt="box art for super mariob bros 2 jp release">
                 <table>
                     <tr>
                         <th>
@@ -152,7 +152,7 @@
         <hr>
         <section class="games-list">
             <div class="release-info">
-                <img src="assets/images/super-mario-bros-2.jpg">
+                <img src="assets/images/super-mario-bros-2.jpg" alt="box art for super mario bros 2 western release">
                 <table>
                     <tr>
                         <th>
@@ -198,7 +198,7 @@
         <hr>
         <section class="games-list">
             <div class="release-info">
-                <img src="assets/images/super-mario-bros-3.jpg">
+                <img src="assets/images/super-mario-bros-3.jpg" alt="box art for super mario bros 3">
                 <table>
                     <tr>
                         <th>
