Replaced h tags in table cells with strong, changed input type for message field on form, removed frame border attribute from iframes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
-              content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+              content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Information on Super Mario Bros. 8-bit games">
         <meta name="keywords" content="super mario bros, 8-bit games, super mario nes">
@@ -45,10 +45,10 @@
             <table id="consoles">
                 <tr>
                     <th>
-                        <h6>NES</h6>
+                        <strong>NES</strong>
                     </th>
                     <th>
-                        <h6>Famicom</h6>
+                        <strong>Famicom</strong>
                     </th>
                 </tr>
                 <tr>
@@ -70,7 +70,7 @@
                 <table>
                     <tr>
                         <th>
-                            <h4>Release Date:</h4>
+                            <strong>Release Date:</strong>
                         </th>
                     </tr>
                     <tr>
@@ -103,7 +103,7 @@
                 </p>
             </div>
             <div>
-                <iframe width="500" height="315" src="https://www.youtube.com/embed/ia8bhFoqkVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/ia8bhFoqkVE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <hr>
@@ -113,7 +113,7 @@
                 <table>
                     <tr>
                         <th>
-                            <h4>Release Date:</h4>
+                            <strong>Release Date:</strong>
                         </th>
                     </tr>
                     <tr>
@@ -146,7 +146,7 @@
                 </p>
             </div>
             <div>
-                <iframe width="500" height="315" src="https://www.youtube.com/embed/GrXc91n2kPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/GrXc91n2kPs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <hr>
@@ -156,7 +156,7 @@
                 <table>
                     <tr>
                         <th>
-                            <h4>Release Date:</h4>
+                            <strong>Release Date:</strong>
                         </th>
                     </tr>
                     <tr>
@@ -192,7 +192,7 @@
                 </p>
             </div>
             <div>
-                <iframe width="500" height="315" src="https://www.youtube.com/embed/sssqnrc9ZAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/sssqnrc9ZAQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <hr>
@@ -202,7 +202,7 @@
                 <table>
                     <tr>
                         <th>
-                            <h4>Release Date:</h4>
+                            <strong>Release Date:</strong>
                         </th>
                     </tr>
                     <tr>
@@ -236,7 +236,7 @@
                 </p>
             </div>
             <div>
-                <iframe width="500" height="315" src="https://www.youtube.com/embed/82TL-Acm4ts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/82TL-Acm4ts" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <hr>
@@ -251,7 +251,7 @@
                 <label for="email">Email Address</label>
                 <input type="email" id="email" name="email_address" required class="text-input">
                 <label for="message">Message</label>
-                <input type="textarea" id="message" name="message_to_send" required class="text-input">
+                <input type="text" id="message" name="message_to_send" required class="text-input">
                 <input type="submit" value="Send" class="send-button">
             </form>
         </section>
