Wrapped into text and console image in section tag, set max-wdth and margin for this section and the games-list class

--- a/index.html
+++ b/index.html
@@ -33,34 +33,36 @@
             </nav>
         </header>
         <hr>
-        <!--Explanation of the purpoes of the site-->
-        <div id="site-intro">
-            <h3>1985 - 1991</h3>
-            <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
+        <section id="intro-and-image">
+            <!--Explanation of the purpoes of the site-->
+            <div id="site-intro">
+                <h3>1985 - 1991</h3>
+                <p>The Super Mario Bros. games launched on the Nintendo Entertainment System (NES). This was the first Nintendo home console
                 known as the Famicom in Japan. This website provides information about each of the games, including gameplay footage.
-            </p>
-        </div>
-        <!--Pictures of the console on which the games appeared. Useful information as it's a part of the ganes history. This was also added as decoration to prevent the home page appearing too plain.-->
-        <div>
-            <table id="consoles">
-                <tr>
-                    <th>
-                        <strong>NES</strong>
-                    </th>
-                    <th>
-                        <strong>Famicom</strong>
-                    </th>
-                </tr>
-                <tr>
-                    <td>
-                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/NES-Console-Set.jpg/440px-NES-Console-Set.jpg" alt="picture of nintendo entertainment system">
-                    </td>
-                    <td>  
-                        <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Nintendo-Famicom-Console-Set-FL.jpg/440px-Nintendo-Famicom-Console-Set-FL.jpg" alt="picture of nintendo famicom">
-                    </td>
-                </tr>
-            </table>
-        </div>
+                </p>
+            </div>
+            <!--Pictures of the console on which the games appeared. Useful information as it's a part of the ganes history. This was also added as decoration to prevent the home page appearing too plain.-->
+            <div>
+                <table id="consoles">
+                    <tr>
+                        <th>
+                            <strong>NES</strong>
+                        </th>
+                        <th>
+                            <strong>Famicom</strong>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/NES-Console-Set.jpg/440px-NES-Console-Set.jpg" alt="picture of nintendo entertainment system">
+                        </td>
+                        <td>  
+                            <img class="console-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Nintendo-Famicom-Console-Set-FL.jpg/440px-Nintendo-Famicom-Console-Set-FL.jpg" alt="picture of nintendo famicom">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
         <hr>
         <!--The sections below contains the information for each game-->
         <section class="games-list">
